# giter-tauri

./: LICENSE  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  todo.md  tsconfig.json  vite.config.ts
.vercel/: project.json
src/: App.vue  index.scss  main.ts
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/giter-traits/: Cargo.toml
src-tauri/crates/giter-traits/src/: lib.rs
src-tauri/crates/giter-utils/: Cargo.toml
src-tauri/crates/giter-utils/src/: func.rs  lib.rs  util.rs
src-tauri/crates/giter-utils/src/types/: author.rs  branch.rs  cache.rs  commit.rs  commit_filter.rs  contribution.rs  credential.rs  diff.rs  error.rs  file.rs  file_tree.rs  fs.rs  git_data_provider.rs  git_error.rs  mod.rs  progress.rs  provider_error.rs  status.rs
src-tauri/crates/giter-utils/tests/: git_data_provider.rs
src-tauri/crates/giter-watcher/: Cargo.toml
src-tauri/crates/giter-watcher/src/: error.rs  lib.rs  modify_watcher.rs
src-tauri/crates/giter-watcher/src/types/: mod.rs  modify_watcher.rs
src-tauri/crates/macros/: Cargo.toml
src-tauri/crates/macros/src/: command_result.rs  lib.rs
src-tauri/src/: cmd.rs  emit.rs  lib.rs  main.rs
src-tauri/src/core/: cache.rs  handle.rs  mod.rs  store.rs
src-tauri/src/types/: cache.rs  error.rs  fs.rs  macros.rs  mod.rs  serial_macros.rs  store.rs
src-tauri/src/utils/: consts.rs  db.rs  dirs.rs  fs.rs  init.rs  macros.rs  mod.rs  resolve.rs
src/components/: index.vue
src/components/common/: abstract-dialog.tsx  app-provider.vue  glassmorphism.vue  loading-view.vue
src/components/common/editor/: diffEditor.vue  editor.vue  types.ts
src/components/common/file-icon/: fileicons.ts  index.vue  patterns.ts  types.ts
src/components/common/file-selector/: index.ts  index.tsx  index.vue  tree.vue
src/components/common/hash-avatar/: index.vue
src/components/common/info-dialog/: form.vue  index.ts  index.vue
src/components/common/layout-page/: index.vue
src/components/common/remote-user-pwd-dialog/: index.tsx  types.ts
src/components/common/source-control-dialog/: index.tsx  index.vue  types.ts
src/components/common/source-control-dialog/components/: changed-file-widget.vue  file-item.vue
src/components/common/spliter/: index.vue
src/components/extend-page/: index.vue  shrink-bar.vue
src/components/file-selector/: tree.vue  types.ts
src/components/fileSelector/: comp.vue  index.ts  tree.vue  types.ts
src/components/info-dialog/: form.vue  index.ts  index.vue  types.ts
src/components/repo-home/: index.vue  types.ts  util.ts
src/components/repo-home/components/: header.vue  notification.tsx  repo-filter-form.vue  repo-item.vue  repo-list.vue  status-light.vue
src/components/repoHome/: index.vue
src/components/repoHome/components/: header.vue
src/const/: command.ts  index.ts  listen.ts  windows.ts
src/enum/: error.ts  index.ts
src/router/: index.ts
src/store/: index.ts
src/store/modules/app/: index.ts
src/store/modules/notification/: index.ts  type.ts
src/store/modules/repo/: index.ts
src/store/modules/theme/: index.ts
src/types/: index.ts  key.ts  store.ts  util.ts
src/utils/: command.ts  config.ts  dialog.ts  dom.ts  edit.ts  err-notify.ts  storage.ts  store.ts  tool.ts  windows.ts
src/views/commit/: commit-item.vue  filter-form.vue  hook.ts  index.vue  type.ts
src/views/commit/components/: filter-form.vue
src/views/commit/components/detail-dialog/: diff-detail-item.vue  index.vue  utils.tsx
src/views/contribution/: index.vue  types.ts
src/views/contribution/components/: commit-hot.vue
src/views/file-history/: compare-select-dialog.tsx  history-compare-panel.vue  history-header.vue  history-panel.vue  index.vue  types.ts
src/views/file-tree/: index.vue
src/views/file-tree/components/: tree.vue
src/views/main/: index.vue
src/views/main/commit/: hook.ts  index.vue
src/views/main/commit/components/: action-header.vue  commit-item.vue  filter-form.vue  pagination-footer.vue
src/views/main/commit/components/detail-dialog/: diff-detail-item.vue  index.ts  index.vue  keys.ts  types.ts  utils.tsx
src/views/main/contribution/: index.vue
src/views/main/contribution/components/: commit-hot.vue
src/windows/: file-history.ts  file-tree.ts
