[package]
name = "giter-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "giter_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [
    "crates/giter-utils",
]

[workspace.dependencies]
gix = { version = "0.69.1", default-features = false }


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
giter-utils = { path = "crates/giter-utils", version = "0.0.1"}
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

gix = { workspace = true, features = ["blob-diff", "max-performance"] }

