[package]
name = "giter-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "giter_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [
    "crates/giter-utils",
    "crates/giter-watcher"
]

[workspace.dependencies]
gix = { version = "0.69.1", default-features = false }
log = "0.4.22"
parking_lot = "0.12.3"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dependencies]
once_cell = "1.20.2"
notify = { version = "6.1.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.22"
log4rs = "1"
anyhow = "1.0"
chrono = "0.4"
gix = { workspace = true, features = ["blob-diff", "max-performance", "serde"] }
gix-discover = "0.37.0"
parking_lot = "0.12.3"

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }

giter-utils = { path = "crates/giter-utils", version = "0.0.1"}
giter-watcher = { path = "crates/giter-watcher", version = "0.0.1"}
