[package]
name = "giter-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "giter_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [ 
    "crates/giter-traits",
    "crates/giter-utils",
    "crates/giter-watcher",
    "crates/macros"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dependencies]
syn = {version="1.0.57",features= ["full", "fold"] }
quote = "1.0.22"
once_cell = "1.20.2"
notify = { version = "6.1.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
dashmap = "6.1.0"
similar = "2.7.0"
serde_json = "1"
log = "0.4.22"
log4rs = "1"
anyhow = "1.0"
chrono = "0.4"
git2 = "0.20.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
parking_lot = "0.12.3"
thiserror = "2.0.12"
strum = "0.27.1"
strum_macros = "0.27.1"

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }

giter-utils = { path = "crates/giter-utils", version = "0.0.1"}
giter-watcher = { path = "crates/giter-watcher", version = "0.0.1"}
giter-macros = { path = "crates/macros", version = "0.0.1"}
tauri-plugin-shell = "2"
giter-traits = { version = "0.1.0", path = "crates/giter-traits" }
