[package]
name = "giter-utils"
authors = ["Fanick"]
version = "0.0.1"

[dependencies]
parking_lot = "0.12.3"
bitflags = "2.8.0"
similar = { version = "2.7.0", features = ["serde"]}
regex = "1"
chrono = "0.4"
git2 = "0.20.0"
serde = { version = "1.0.216", features = ["derive"] }
imara-diff = "0.1.7"
log = "0.4.22"
anyhow = "1.0"