[package]
name = "giter-watcher"
authors = ["Fanick"]
edition = "2024"
version = "0.0.1"

[dependencies]
notify = { version = "6.1.1", features = ["serde"] }
dashmap = {version = "6.1.0", features = ["rayon"]}
rayon = "1.10.0"
log = "0.4.22"
parking_lot = "0.12.3"
thiserror = "2.0.12"
strum = "0.27.1"
strum_macros = "0.27.1"
giter-traits = { version = "0.1.0", path = "../giter-traits" }
anyhow = "1.0.97"
